--- a/Python_for_finance.ipynb
+++ b/Python_for_finance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python_for_finance.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPYZxbgjMsqX7sD2idJO7He",
+      "authorship_tag": "ABX9TyMBwowK8EaRnmhM7W9Vazda",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +32,11 @@
       "source": [
         "import datetime as dt\n",
         "import matplotlib.pyplot as plt\n",
+        "from matplotlib import style\n",
         "import pandas as pd\n",
-        "import pandas_datareader.data as web\n",
-        "import matplotlib as plt"
+        "import pandas_datareader.data as web"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     }
   ]
