--- a/Python_for_finance.ipynb
+++ b/Python_for_finance.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Python_for_finance.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPph+Lu8eBwypN+oGcDf4sY",
+      "authorship_tag": "ABX9TyNOFop2K7Cv3WpUPs8HA4iD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -152,6 +152,7 @@
         "outputId": "2c622079-ac12-4c0f-a37f-42418823515d"
       },
       "source": [
+        "# Adding Volume plot. \n",
         "ax1 = plt.subplot2grid((6,1), (0,0), rowspan=5, colspan=1)\n",
         "ax2 = plt.subplot2grid((6,1), (5,0), rowspan=1, colspan=1, sharex=ax1)\n",
         "\n",
@@ -176,6 +177,50 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XXluRVLOqkgf",
+        "outputId": "fb16417f-86e6-4173-dfb6-c0ea3e833a63"
+      },
+      "source": [
+        "# Resample\n",
+        "df_ohlc = df['Adj Close'].resample('10D').ohlc()\n",
+        "df_voulme = df['Volume'].resample('10D').sum()\n",
+        "\n",
+        "print(df_ohlc.head())"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "             open   high    low  close\n",
+            "Date                                  \n",
+            "2010-06-29  4.778  4.778  3.160  3.492\n",
+            "2010-07-09  3.480  4.128  3.410  4.128\n",
+            "2010-07-19  4.382  4.382  4.044  4.144\n",
+            "2010-07-29  4.070  4.390  3.918  3.918\n",
+            "2010-08-08  3.920  3.920  3.520  3.830\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B586M7FArjAs"
+      },
+      "source": [
+        "# Plotting candle sticks. \n"
+      ],
+      "execution_count": 30,
+      "outputs": []
     }
   ]
 }
